SW-25296 - Add content type sorting

--- a/snippets/backend/content_type_manager/main.ini
+++ b/snippets/backend/content_type_manager/main.ini
@@ -22,6 +22,8 @@ detail/view = "View",
 detail/seo = "SEO"
 detail/addNewField = "Add new field"
 view/showInFrontend = "Creating a Listing/Detail Page in the Frontend"
+view/sortField = "Sorting"
+view/sortDirection = "Sort direction"
 view/titleField = "Title"
 view/descriptionField = "Description"
 view/imageField = "Image"
@@ -56,6 +58,8 @@ seo/robots/index_follow = "index,follow (Index page, follow links on page)"
 seo/robots/index_nofollow = "index,nofollow (Index page, do not follow links on page)"
 seo/robots/noindex_follow = "noindex,follow (Do not index page, follow links on page)"
 seo/robots/noindex_nofollow = "noindex,nofollow (Do not index page, do not follow links on page)"
+view/sorting/asc = "Ascending"
+view/sorting/desc = "Descending"
 
 [de_DE]
 list/title = "Inhaltstypen"
@@ -81,6 +85,8 @@ detail/view = "Darstellung"
 detail/seo = "SEO"
 detail/addNewField = "Neues Feld erstellen"
 view/showInFrontend = "Im Frontend ein Listing/Detail-Seite erzeugen"
+view/sortField = "Sortierung"
+view/sortDirection = "Sortierrichtung"
 view/titleField = "Titel"
 view/descriptionField = "Beschreibung"
 view/imageField = "Bild"
@@ -115,3 +121,5 @@ seo/robots/index_follow = "index,follow (Seite indexieren, Links auf der Seite f
 seo/robots/index_nofollow = "index,nofollow (Seite indexieren, Links auf der Seite nicht folgen)"
 seo/robots/noindex_follow = "noindex,follow (Seite nicht indexieren, Links auf der Seite folgen)"
 seo/robots/noindex_nofollow = "noindex,nofollow (Seite nicht indexieren, Links auf der Seite nicht folgen)"
+view/sorting/asc = "Aufsteigend"
+view/sorting/desc = "Absteigend"
