--- a/snippets/backend/emotion/view/components/content_type.ini
+++ b/snippets/backend/emotion/view/components/content_type.ini
@@ -2,6 +2,7 @@
 mode/0 = "Newest first"
 mode/1 = "Random"
 mode/2 = "Selected"
+mode/3 = "Content Type sorting"
 sorting = "Sorting"
 content_type = "Content Type"
 selection = "Selection"
@@ -10,6 +11,7 @@ selection = "Selection"
 mode/0 = "Neueste zuerst"
 mode/1 = "Zufällig"
 mode/2 = "Ausgewählte"
+mode/3 = "Content Type Sortierung"
 sorting = "Sortierung"
 content_type = "Inhaltstyp"
 selection = "Auswahl"
